# p6-docs

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  README.md  _README.md  index.html  lunr-index-1641696510592.json  lunr-index-1641771735352.json  lunr-index-1643705606285.json  lunr-index-1643705643539.json  lunr-index-1643711058831.json  lunr-index-1643718923527.json  lunr-index-1643736927440.json  lunr-index-1643748240810.json  lunr-index-1643750414708.json  lunr-index-1643762754435.json  lunr-index-1643763039288.json  lunr-index-1643764465712.json  lunr-index-1643768432706.json  lunr-index-1643815149203.json  lunr-index-1643815707483.json  lunr-index-1643816244017.json  lunr-index-1643817911201.json  lunr-index-1643920731189.json  lunr-index-1644519701108.json  lunr-index-1644521999018.json  lunr-index-1644522629727.json  lunr-index-1644524552347.json  lunr-index-1644531658749.json  lunr-index-1644533752268.json  lunr-index-1644575611022.json  lunr-index-1644576105172.json  lunr-index-1644577631925.json  lunr-index-1644578591852.json  lunr-index-1644776566178.json  lunr-index-1644777423863.json  lunr-index-1644777456718.json  lunr-index-1644780142521.json  lunr-index-1644780196672.json  (+286 more)
.github/workflows/: build_and_run_tests.yml  build_tests.yml  deploy.yml
about/: index.html
assets/css/: styles.06246f99.css  styles.315a61f1.css  styles.3e3977f6.css  styles.966135c5.css  styles.9e7eb1cc.css  styles.b20a13d5.css
assets/js/: 01352f9d.02c36b37.js  01352f9d.09a2525d.js  01352f9d.0aef73ec.js  01352f9d.11d0c981.js  01352f9d.12668182.js  01352f9d.14b43bce.js  01352f9d.17e3e044.js  01352f9d.198ca9d4.js  01352f9d.1ba0c96d.js  01352f9d.388e885e.js  01352f9d.3b762d42.js  01352f9d.3c8f1407.js  01352f9d.4e0d3a86.js  01352f9d.554eeac4.js  01352f9d.555c25d3.js  01352f9d.632e2cde.js  01352f9d.6715a53a.js  01352f9d.67242bbe.js  01352f9d.811fc24c.js  01352f9d.8b92b5d4.js  01352f9d.8bc037b0.js  01352f9d.a7b8e290.js  01352f9d.adaef39a.js  01352f9d.b001fb44.js  01352f9d.b0b79015.js  01352f9d.b2071bcd.js  01352f9d.b4c1f2b8.js  01352f9d.b5e8f00d.js  01352f9d.c9406e0e.js  01352f9d.ddea0902.js  01352f9d.e32bf81e.js  01352f9d.eb9b4a4c.js  015a51b5.23c28836.js  015a51b5.babf120d.js  015a51b5.c7a12c41.js  015a51b5.f35c124e.js  026d565c.21fa4408.js  08f62237.4738f33e.js  08f62237.e038a266.js  0d33ae50.6b0c9cfd.js  (+1915 more)
blog/archive/: index.html
docs/api/: index.html
docs/tags/: index.html
docs/tutorials/: index.html
docs_generator/: CMakeLists.txt  Doxyfile.in  doxybook_config.json  gen_doc.py
docs_generator/doxybook_templates/: breadcrumbs.tmpl  class_members_details.tmpl  class_members_inherited_tables.tmpl  class_members_tables.tmpl  footer.tmpl  function_signature.tmpl  header.tmpl  index.tmpl  index_classes.tmpl  index_groups.tmpl  kind_class.tmpl  kind_file.tmpl  kind_group.tmpl  kind_nonclass.tmpl  member_details.tmpl  nonclass_members_details.tmpl  nonclass_members_tables.tmpl
examples/: index.html
examples/basic/: CMakeLists.txt  main.cpp
examples/complete/: CMakeLists.txt  main.cpp
examples/tests/: CMakeLists.txt  main.cpp
reference/: index.html
reference/canvas/: index.html
reference/drawing/: index.html
reference/events/: index.html
reference/image/: index.html
reference/index_classes/: index.html
reference/index_examples/: index.html
reference/index_files/: index.html
reference/index_groups/: index.html
reference/index_namespaces/: index.html
reference/index_pages/: index.html
reference/input/: index.html
reference/math/: index.html
reference/random/: index.html
reference/rendering-destination/: index.html
reference/text/: index.html
reference/time/: index.html
reference/transform/: index.html
reference/update-flow/: index.html
reference/window/: index.html
tags/: index.html
tests/: .clang-tidy  CMakeLists.txt  canvas_size_mode.cpp  color.cpp  context_move_constructor.cpp  dear_imgui.cpp  drawing.cpp  fading_effect.cpp  fill_and_stroke.cpp  framebuffer_resized.cpp  framerate.cpp  framerate_and_time.cpp  fullscreen.cpp  keyboard_events.cpp  line.cpp  load_image.cpp  main_canvas_resized.cpp  maximize_restore_minimize_window.cpp  mouse_events.cpp  multi_windows.cpp  opengl.cpp  opengl_3D.cpp  passing_images_to_shaders.cpp  random.cpp  read_pixel.cpp  render_to_canvas.cpp  render_to_image.cpp  save_image.cpp  several_contexts.cpp  shader.cpp  square_and_rectangle.cpp  text.cpp  transform.cpp  triangle.cpp  window_resized.cpp  yolo.cpp
tests/res/: opengl_3D.frag  shader-canvas-uv.frag  shader-raw-uv.frag  shader-uniform-uv.frag  shader_applied_to_image.frag
tutorials/: index.html
tutorials/angles/: index.html
tutorials/canvases/: index.html
tutorials/creating-a-project/: index.html
tutorials/custom-shaders/: index.html
tutorials/dear-imgui/: index.html
tutorials/drawing/: index.html
tutorials/events/: index.html
tutorials/images/: index.html
tutorials/random/: index.html
tutorials/read-pixel/: index.html
tutorials/saving-images/: index.html
tutorials/text/: index.html
tutorials/the-context/: index.html
tutorials/transform/: index.html
website/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+231 files in other folders)
